Final Updated Code